# AMCL

./: CMakeLists.txt  README.md  benchmark_results.csv  ~$Shelonin_AK_AMCL_report.pptx
assets/: benchmark_results.csv
benchmark/: main_benchmark.cpp
include/: amcl.hpp  benchmark.hpp  game_manager.hpp  lidar.hpp  map.hpp  mcl.hpp  naive_localizer.hpp  odometry.hpp  robot.hpp
include/maps/: map1.hpp
scripts/: banana_distr_plot.py  plot_results.py
source/: amcl.cpp  benchmark.cpp  game_manager.cpp  main.cpp  mcl.cpp  naive_localizer.cpp  robot.cpp
